book column alignment fix

--- a/src/styles/landing.sass
+++ b/src/styles/landing.sass
@@ -76,6 +76,9 @@ $maxColWidth: 900px
             animation: none
             transform: translateY(-100px)
 
+      &:last-child
+        margin-right: 0
+
     .book
       list-style: none
       margin-bottom: $bookGap
